Set mvn project java version to 21